<resources>
    <string name="app_name">Malawi Scenery</string>
    <string name="google_analytics_id">UA-79044306-1</string>

    <string name="action_settings">Settings</string>
    <string name="action_email_us">Email Us</string>
    <string name="action_photo_creds">Photo Credit</string>
    <string name="action_links">Links</string>
    <string name="action_share">Social Share</string>
    <string name="action_feedback">Submit Feedback</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_submit">Submit</string>

    <string name="developer_email">malawiscenery@gmail.com</string>

    <string name="track_main_activity">Main Activity</string>
    <string name="track_fullscreen_activity">FullScreen Activity</string>
    <string name="track_settings_activity">Settings Activity</string>
    <string name="track_app_crash">AppCrash</string>
    <string name="track_settings_switch">Settings Changed</string>
    <string name="track_album_click">Album Click</string>

    <string name="settings_title">Malawi Scenery Settings</string>
    <string name="hint_google_username">Google Username</string>
    <string name="hint_gallery_folder">Gallery Folder</string>
    <string name="hint_column_numbers">Number of Columns</string>
    <string name="text_notifications">Notifications</string>
    <string name="notification_on">ON</string>
    <string name="notification_off">OFF</string>
    <string name="text_wallpaper">Wallpaper Service</string>
    <string name="wallpaper_on">ON</string>
    <string name="wallpaper_off">OFF</string>
    <string name="hint_days">Update frequency (Days)</string>
    <string name="button_save">Save</string>

    <string name="nav_drawer_recently_added">Recently Added</string>
    <string name="toast_saved">Wallpaper saved to #</string>
    <string name="toast_saved_failed">Sorry! Failed to save wallpaper</string>
    <string name="toast_wallpaper_set">Wallpaper updated!</string>
    <string name="toast_wallpaper_set_failed">Sorry! Unable to set wallpapaer</string>
    <string name="splash_error">Unable to download wallpapers. Verify your google\'s user name in settings or device doesn\'t have internet connection!</string>
    <string name="set_wallpaper">Set</string>
    <string name="download_wallpaper">Download</string>
    <string name="msg_unknown_error">Sorry! Unknown error occurred.</string>
    <string name="msg_wall_fetch_error">Sorry! Unable to fetch wallpaper(s). Verify app settings or device doesn\'t have internet connection.</string>
    <string name="toast_enter_google_username">Please enter google username</string>
    <string name="toast_enter_valid_grid_columns">Please enter valid number of columns</string>
    <string name="toast_enter_gallery_name">Please enter gallery directory name</string>
    <string name="toast_enter_num_of_days">Please enter right number of days</string>
    <string name="lbl_google_username">Google username</string>
    <string name="lbl_no_grid_columns">Number of grid columns</string>
    <string name="lbl_gallery_name">Gallery directory name</string>
    <string name="lbl_btn_save">Save</string>
    <string name="switch_toggle_service">Live Wallpaper</string>

    <string name="lbl_email_upload">Enter email address</string>
    <string name="lbl_location_upload">Location of picture</string>
    <string name="lbl_resort_upload">Resort (optional)</string>
    <string name="lbl_description_upload">Description (optional)</string>
    <string name="btn_browse_upload">Browse</string>
    <string name="btn_upload_upload">Upload</string>
    <string name="image_description">Beautiful Image Displayed Here</string>

    <string-array name="locations_upload">
        <item> Balaka</item>
        <item>Blantyre</item>
        <item>Chikwawa</item>
        <item>Chiradzulo</item>
        <item>Chitipa</item>
        <item>Dedza</item>
        <item>Dowa</item>
        <item>Karonga</item>
        <item>Kasungu</item>
        <item>Likoma</item>
        <item>Lilongwe</item>
        <item>Machinga</item>
        <item>Mangochi</item>
        <item>Mchinji</item>
        <item>Mulanje</item>
        <item>Mwanza</item>
        <item>Mzimba</item>
        <item>Neno</item>
        <item>Nkhata Bay</item>
        <item>Nsanje</item>
        <item>Ntcheu</item>
        <item>Ntchisi</item>
        <item>Nkhotakota</item>
        <item>Nsanje</item>
        <item>Phalombe</item>
        <item>Salima</item>
        <item>Thyolo</item>
        <item>Zomba</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_full_screen">FullScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_fullscreen1">FullscreenActivity1</string>

</resources>
