<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="5"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_feeback"
        android:orderInCategory="7"
        android:title="@string/action_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_email_us"
        android:orderInCategory="10"
        android:title="@string/action_email_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_photo_creds"
        android:orderInCategory="15"
        android:title="@string/action_photo_creds"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_links"
        android:orderInCategory="20"
        android:title="@string/action_links"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_privacy_policy"
        android:orderInCategory="90"
        android:title="@string/action_privacy_policy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
